Committed by dafuentesvidal

--- a/metadata.properties
+++ b/metadata.properties
@@ -1,2 +1,5 @@
-# cap-appian-prueba
-Repositorio de pruebas
+#
+#Fri Feb 12 10:57:26 CET 2021
+ddlScriptPaths=
+datasourceNames=
+Repositorio=de pruebas
