--- a/import-manager.properties
+++ b/import-manager.properties
@@ -27,7 +27,7 @@ url=https://capgemini-spain-1016.appiancloud.com/suite
 ### Import-specific properties
 
 ## Path for the application ZIP file to import
-applicationPath=C:\\Users\\danfuent\\Documents\\Patch - 2021-02-25_1600.zip
+applicationPath=C:\\Users\\danfuent\\Documents\\Workspace\\cap-appian-prueba\\Patch.zip
 
 ## UUID of the application to which patch contents will be added
 uuid=_a-0000e5b0-33e4-8000-9bb1-011c48011c48_2514267
