Subida de prueba

--- a/import-manager.properties
+++ b/import-manager.properties
@@ -30,7 +30,7 @@ url=https://capgemini-spain-1016.appiancloud.com/suite
 applicationPath=C:\\Users\\danfuent\\Documents\\Workspace\\cap-appian-prueba\\Patch.zip
 
 ## UUID of the application to which patch contents will be added
-uuid=_a-0000e5b0-33e4-8000-9bb1-011c48011c48_2514267
+##uuid=_a-0000e5b0-33e4-8000-9bb1-011c48011c48_2514267
 
 ## List of comma-separated paths for the DDL files to execute
 #ddlPath=C:\\Users\\acme.corp\\Documents\\script1.sql,C:\\Users\\acme.corp\\Documents\\script2.sql
